tests/ui/issues/issue-57741-dereference-boxed-value/issue-57741.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57741.rs:20:9
   |
LL |     let y = match x {
   |                   - this expression has type `Box<T>`
LL |         T::A(a) | T::B(a) => a,
   |         ^^^^^^^ expected `Box<T>`, found `T`
   |
   = note: expected struct `Box<T>`
                found enum `T`
help: consider dereferencing the boxed value
   |
LL |     let y = match *x {
   |                   +

error[E0308]: mismatched types
  --> $DIR/issue-57741.rs:20:19
   |
LL |     let y = match x {
   |                   - this expression has type `Box<T>`
LL |         T::A(a) | T::B(a) => a,
   |                   ^^^^^^^ expected `Box<T>`, found `T`
   |
   = note: expected struct `Box<T>`
                found enum `T`
help: consider dereferencing the boxed value
   |
LL |     let y = match *x {
   |                   +

error[E0308]: mismatched types
  --> $DIR/issue-57741.rs:27:9
   |
LL |     let y = match x {
   |                   - this expression has type `Box<S>`
LL |         S::A { a } | S::B { b: a } => a,
   |         ^^^^^^^^^^ expected `Box<S>`, found `S`
   |
   = note: expected struct `Box<S>`
                found enum `S`
help: consider dereferencing the boxed value
   |
LL |     let y = match *x {
   |                   +

error[E0308]: mismatched types
  --> $DIR/issue-57741.rs:27:22
   |
LL |     let y = match x {
   |                   - this expression has type `Box<S>`
LL |         S::A { a } | S::B { b: a } => a,
   |                      ^^^^^^^^^^^^^ expected `Box<S>`, found `S`
   |
   = note: expected struct `Box<S>`
                found enum `S`
help: consider dereferencing the boxed value
   |
LL |     let y = match *x {
   |                   +

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
